Enhance AgentVerse project with new features and optimizations
- Updated index.html with a new layout and background color.
- Added package-lock.json for dependency management.
- Introduced server.ts for backend API with environment variable support.
- Created multiple sprite and map optimization guides in markdown.
- Implemented new room scenes for each agent with specific configurations.
- Enhanced loading scene to include room tilemaps and agent sprites.
- Added new tilemap JSON files for agent-specific rooms.
- Improved agent class with pathfinding capabilities and animation adjustments.
- Updated town scene to handle transitions to agent rooms.
- Added new requirements for backend dependencies.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "npx tsx server.ts"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "phaser": "^3.80.1",
     "phaser3-rex-plugins": "^1.80.4"
   },
