--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,12 @@ yarn-error.log*
 __pycache__/
 *.pyc
 
+# Python virtual environments
+venv/
+backend/venv/
+env/
+.env/
+
 # Testing
 coverage/
 
