--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "server": "npx tsx server.ts"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.562.0",
     "phaser": "^3.80.1",
-    "phaser3-rex-plugins": "^1.80.4"
+    "phaser3-rex-plugins": "^1.80.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20.10.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
   }
