Add user and room API endpoints with database integration
- Introduced user management endpoints for creating, retrieving, and updating user profiles.
- Added room management endpoints to list and retrieve room details, including buildings and spawn points.
- Integrated PostgreSQL database for multiplayer persistence, with connection details added to .env.example.
- Enhanced server.py with new user and room models, and implemented database connection handling.
- Updated requirements.txt to include asyncpg and pyjwt for database and JWT support.

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,14 @@ FIRECRAWL_API_KEY=fc-your-firecrawl-api-key
 BRIGHTDATA_API_KEY=your-brightdata-api-key
 
 # ============================================
+# Database Configuration (PostgreSQL)
+# ============================================
+
+# PostgreSQL connection URL for multiplayer persistence
+# Format: postgresql://user:password@host:port/database
+DATABASE_URL=postgresql://arkagentic:your-password@127.0.0.1:5432/arkagentic
+
+# ============================================
 # Optional Configuration
 # ============================================
 
