--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "colyseus.js": "^0.15.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "phaser": "^3.80.1",
