Add Jitsi video chat integration and user settings modal
- Introduced Jitsi video chat functionality with proximity-based voice chat.
- Added user settings modal for profile customization, including display name and avatar selection.
- Implemented session management for user authentication and settings persistence.
- Updated .env.example with Jitsi configuration options.
- Enhanced loading and character selection scenes to support session tokens and offline mode.
- Improved player class to display names above avatars in multiplayer scenarios.

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,27 @@ BRIGHTDATA_API_KEY=your-brightdata-api-key
 DATABASE_URL=postgresql://arkagentic:your-password@127.0.0.1:5432/arkagentic
 
 # ============================================
+# Jitsi Video Chat Configuration
+# ============================================
+
+# Jitsi server domain for proximity video chat
+# Default: meet.jit.si (free public server, no setup required)
+# Self-hosted example: meet.yourdomain.com
+# See /docs/JITSI_MEET_INTEGRATION_RESEARCH.md for self-hosting setup
+VITE_JITSI_DOMAIN=meet.jit.si
+
+# JWT secret for authenticated Jitsi rooms (self-hosted only)
+# Generate with: openssl rand -hex 32
+# JITSI_JWT_SECRET=your-jwt-secret
+
+# ============================================
+# Session Security
+# ============================================
+
+# Session token expiry in days (default: 30)
+SESSION_EXPIRY_DAYS=30
+
+# ============================================
 # Optional Configuration
 # ============================================
 
