--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "npx tsx server.ts"
+    "server": "npx tsx server.ts",
+    "setup": "chmod +x scripts/setup.sh && ./scripts/setup.sh",
+    "backend": "cd backend && source venv/bin/activate && python server.py",
+    "multiplayer": "cd multiplayer && npm run dev",
+    "dev:all": "concurrently -n 'frontend,backend,multiplayer' -c 'cyan,yellow,magenta' 'npm run dev' 'npm run backend' 'npm run multiplayer'",
+    "db:init": "psql $DATABASE_URL -f scripts/db-init.sql",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -27,6 +35,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
+    "concurrently": "^9.2.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.3.0",
