Fix Colyseus 0.16: add useDefineForClassFields:false and safety checks for state

--- a/multiplayer/tsconfig.json
+++ b/multiplayer/tsconfig.json
@@ -6,7 +6,9 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "useDefineForClassFields": false,
     "strict": true,
+    "strictNullChecks": false,
     "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "./src",
