Add replicate package and update README with project showcase
- Added 'replicate' package to package.json and package-lock.json for enhanced functionality.
- Updated README to include a project showcase section with an image and description of the multi-agent virtual world.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "phaser3-rex-plugins": "^1.80.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "replicate": "^1.4.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
